# procesamiento-imagenes

./: .gitignore
1/: enunciado.txt
1/entrega/Actividad-1-Manuel-Garat/: instrucciones.txt
1/entrega/Actividad-1-Manuel-Garat/descomponer-en-canales/hsl/: CMakeLists.txt
1/entrega/Actividad-1-Manuel-Garat/descomponer-en-canales/rgb/: rgb.cpp.txt
1/entrega/Actividad-1-Manuel-Garat/histograma/a-mano/: CMakeLists.txt
1/src/descomponer-canales/hsl/: CMakeLists.txt  hsl.cpp.txt
1/src/descomponer-canales/rgb/: CMakeLists.txt
1/src/histograma/a-mano/: histograma-con-rectangulos.cpp
1/src/histograma/funciones-librería/: CMakeLists.txt
2/src/: CMakeLists.txt  enunciado.txt
3/entrega/Actividad-3-Manuel-Garat/: instrucciones.txt
3/entrega/Actividad-3-Manuel-Garat/src/: CMakeLists.txt
3/src/: cartoon.cpp
4/: enunciado.txt
4/src/: CMakeLists.txt  galletitas.cpp  galletitas.cpp.txt
5a/: enunciado.txt
5a/entrega/Actividad-5a-Manuel-Garat/: transformaciones-aplicadas.txt
5a/src/: CMakeLists.txt  geometria.cpp
5b/: enunciado.txt
5b/entrega/Actividad-5b-Manuel-Garat/: instrucciones.txt
5b/entrega/Actividad-5b-Manuel-Garat/src/1/: inversa.cpp.txt
5b/entrega/Actividad-5b-Manuel-Garat/src/3/: inversa.cpp
5b/entrega/Actividad-5b-Manuel-Garat/src/4/: inversa.cpp.txt
5b/src/1/: inversa.cpp
5b/src/2/: inversa.cpp  inversa.cpp.txt
5b/src/3/: inversa.cpp
5b/src/4/: CMakeLists.txt  inversa.cpp.txt
6/: Resultados.odt  enunciado.txt
6/entrega/Actividad-6-Manuel-Garat/: instrucciones.txt
6/entrega/Actividad-6-Manuel-Garat/LoG/: cartoon.cpp
6/entrega/Actividad-6-Manuel-Garat/canny/: CMakeLists.txt
6/entrega/Actividad-6-Manuel-Garat/sobel/: cartoon.cpp
6/src/LoG/: cartoon.cpp
6/src/canny/: cartoon.cpp
6/src/sobel/: cartoon.cpp
7/: enunciado.txt
7/entrega/Actividad-7-Manuel-Garat/: instrucciones.txt
7/entrega/Actividad-7-Manuel-Garat/src/: galletitas.cpp
7/src/: CMakeLists.txt  galletitas.cpp
actividades/1/: enunciado.txt
actividades/1/Entregable/: instrucciones.txt
actividades/1/Entregable/descomponer-en-canales/hsl/: CMakeLists.txt
actividades/1/descomponer-canales/hsi/: CMakeLists.txt  hsi.cpp
actividades/1/descomponer-canales/rgb/: CMakeLists.txt  rgb.cpp
actividades/1/entrega/Actividad-1-Manuel-Garat/descomponer-en-canales/rgb/: CMakeLists.txt
actividades/1/entregable/Actividad-1-Manuel-Garat/descomponer-en-canales/rgb/: CMakeLists.txt
actividades/1/entregable/Actividad-1-Manuel-Garat/histograma/funciones-librería/: CMakeLists.txt
actividades/1/histograma/a-mano/: CMakeCache.txt  Makefile  cmake_install.cmake  histograma.cpp
actividades/1/histograma/funciones-librería/: CMakeLists.txt  histograma.cpp
actividades/1/src/descomponer-canales/hsl/: CMakeLists.txt
actividades/2/: galletitas.cpp
actividades/2/entrega/Actividad-2-Manuel-Garat/: instrucciones.txt
actividades/2/entrega/Actividad-2-Manuel-Garat/src/: CMakeLists.txt  galletitas.cpp
actividades/2/src/: galletitas.cpp
actividades/2/umbral/: CMakeLists.txt  umbral.cpp
actividades/3/entrega/Actividad-3-Manuel-Garat/src/: CMakeLists.txt  cartoon.cpp
actividades/3/src/: CMakeLists.txt  cartoon.cpp  enunciado.txt
actividades/4/src/: galletitas.cpp
ejemplos-opencv/ejemplo-opencv/: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  compile_commands.json  header.cpp
ejemplos-opencv/otro-ejemplo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  draw  draw.cpp
ejemplos-opencv/rgb-mal-hecho/: rgb.cpp
