cmake_minimum_required(VERSION 2.8)
project(geometria)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(geometria.out geometria.cpp)
target_link_libraries(geometria.out ${OpenCV_LIBS})
target_compile_options(geometria.out PRIVATE -Wpedantic -Werror -Wall -Wextra)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_custom_target(run COMMAND ./geometria.out "$(ARGS)")
