cmake_minimum_required(VERSION 2.8)
project(inversa)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(inversa.out inversa.cpp)
target_link_libraries(inversa.out ${OpenCV_LIBS})
target_compile_options(inversa.out PRIVATE -Wpedantic -Werror -Wall -Wextra)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_custom_target(run COMMAND ./inversa.out "$(ARGS)" )
