cmake_minimum_required(VERSION 2.8)
project(cartoon)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(cartoon.out cartoon.cpp)
target_link_libraries(cartoon.out ${OpenCV_LIBS})
target_compile_options(cartoon.out PRIVATE -Wpedantic -Werror -Wall -Wextra)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_custom_target(run COMMAND ./cartoon.out "$(ARGS)")
